added bower components, build improvements

--- a/templates/default.html.twig
+++ b/templates/default.html.twig
@@ -1,5 +1,9 @@
 {% extends 'partials/base.html.twig' %}
 
 {% block content %}
-    {{ page.content }}
+	<div class="row">
+		<div class="large-12 columns">
+    	{{ page.content }}
+    </div>
+  </div>
 {% endblock %}
