--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -1,22 +1,22 @@
-<nav class="top-bar" data-topbar role="navigation">
-  <ul class="title-area">
-    <li class="name">
-      <h1><a href="#">Grav</a></h1>
-    </li>
-     <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
-  </ul>
+<div class="title-bar" data-responsive-toggle="menu" data-hide-for="medium">
+  <button class="menu-icon" type="button" data-toggle></button>
+  <div class="title-bar-title">{{ site.title }}</div>
+</div>
 
-  <section class="top-bar-section">
-    <!-- Right Nav Section -->
-    <ul class="right">
+<div class="top-bar" id="menu">
+  <div class="top-bar-left">
+    <ul class="menu" data-dropdown-menu>
+      <li class="menu-text hide-for-small-only">{{ site.title }}</li>
+    </ul>
+  </div>
+  <div class="top-bar-right">
+    <ul class="menu vertical medium-horizontal">
       {% for page in pages.children %}
-      {% if page.visible %}
-      {% set current_page = (page.active or page.activeChild) ? 'active' : '' %}
-      <li class="{{ current_page }}"><a href="{{ page.url }}">{{ page.menu }}</a></li>
-      {% endif %}
+        {% if page.visible %}
+          {% set current_page = (page.active or page.activeChild) ? 'active' : '' %}
+          <li class="{{ current_page }}"><a href="{{ page.url }}">{{ page.menu }}</a></li>
+        {% endif %}
       {% endfor %}
     </ul>
-
-  </section>
-</nav>
+  </div>
+</div>
